# agent-compass

./: .cm  .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  CHANGELOG.md  Makefile  README.md  SKILL.md  diag-result.json  pyproject.toml
agentprecept/: AGENTS.md  README.md  SKILL.md  __init__.py  __main__.py  basic_audit.py  cli.py  design_gate_check.py  gnhf_task.py  pyproject.toml
agentprecept/examples/: first-run.md
agentprecept/methodology/: INDEX.md  M1_A01_why-docs-first_为什么文档先行.md  M1_A02_natural-lang_自然语言编程.md  M2_B03_agent-self-mgmt_Agent自管理.md  M3_C00_naming_命名即导航.md  M3_C04_engineering_工程化实践.md  M4_D00_audit-framework_审计框架.md  M4_D02_agent-ops_Agent运维.md
agentprecept/reference/: README.md  audit-journey.md  cheatsheet.md  comparison.md  six-layer-graph.md
agentprecept/skills/: architecture-design.md  design-rationale.md  project-graph.md  session-handoff.md  test-cases.md
agentprecept/templates/: AUDIT_REPORT.md  FEEDBACK.md  HANDOFF.md  INDEX.md  L1_A01_quickstart_快速开始.md  L1_A02_naming-convention_命名规范.md  L1_C01_phased-plan_实施路线.md  L2_D01_architecture_架构设计.md  L2_D02_quality-gates_质量门.md  L2_E01_env-vars_环境变量.md  L2_E02_profiles_配置环境.md  L2_E03_config_配置管理.md  L2_F01_dev-env_开发环境.md  L2_F02_code-style_代码规范.md  L2_F03_git-workflow_Git工作流.md  L2_F04_error-handling_异常处理.md  L2_F05_logging_日志规范.md  L2_F06_code-review_代码审查.md  L2_F07_module-design_模块设计.md  L2_F08_cli-design_CLI设计.md  L2_G01_data-schema_数据结构.md  L2_G02_api-versioning_API版本管理.md  L2_G03_api-contract_API契约.md  L3_H01_integration_集成方案.md  L3_I01_frontend_前端设计.md  L3_J01_test-strategy_测试策略.md  (+9 more)
(+65 files in other folders)
