[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentprecept"
version = "0.3.0"
description = "AgentPrecept — AI coding agent governance toolkit (precept, not monitoring)"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "fastmcp>=2.0"]

[project.scripts]
agentprecept = "agentprecept.cli:main"
agentprecept-mcp = "agentprecept.mcp_server:main"

[tool.setuptools.packages.find]
include = ["agentprecept*"]